--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "@prisma/client": "^5.21.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "hono": "^4.6.5",
-    "prisma": "^5.21.1"
+    "prisma": "^5.21.1",
+    "tanishqkumar-medium-common": "^1.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240925.0",
