--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@prisma/client": "^5.21.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "hono": "^4.6.5",
