--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "@prisma/extension-accelerate": "^1.2.1",
     "hono": "^4.6.5",
     "prisma": "^5.21.1",
+    "resend": "^4.0.1",
     "tanishqkumar-medium-common": "^1.0.0"
   },
   "devDependencies": {
